--- a/css/topic.css
+++ b/css/topic.css
@@ -1,6 +1,10 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Archivo Narrow', sans-serif;
+    font-family: 'Dosis', sans-serif;
+    font-family: 'Raleway', sans-serif;
+    font-family: 'Roboto Condensed', sans-serif;
 }
 
 body{
@@ -12,20 +16,18 @@ body{
     align-items: center;
 }
 
-.head{
-    margin-top: 4vh;
-    margin-right: 88vw;
-}
-
 .main{
     display: flex;
     align-items: center;
+    height: 100vh;
 }
 
 .sidebar{
     width: 20vw;
     height: 80vh;
-    margin-right: 10vw;
+    margin: 8vh 8vw 0 2vw;
+    background-color: #682AE9;
+    border-radius: 12px;
 }
 
 .sidebar ul{
@@ -45,18 +47,19 @@ body{
 .sidebar ul li a{
     margin:0 1vw;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .middle{
     width: 20vw;
     height: 67vh;
-    background-color: #682AE9;
-    margin-right: 10vw;
+    margin-right: 8vw;
     border-radius: 16px;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
 
 .middle ul{
     list-style: none;
@@ -70,6 +73,15 @@ body{
     padding: 1vh 1vw;
     display: none;
     align-items: center;
+    animation: fade 2s;
+}
+
+@keyframes fade{
+    0%   
+    {opacity: 0;
+        transform: translateX(-10px);}
+    100% 
+    {opacity: 1;}
 }
 
 .middle ul li a{
@@ -85,31 +97,19 @@ body{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: end;
+    align-items: center;
     margin-top: 16vh;
 }
 
-.right .glasses{
-    width: 30vw;
-    height: 30vh;
-    background-image: url(https://pngimg.com/uploads/sunglasses/sunglasses_PNG155.png);
-    background-size:100%;
-    background-size: contain;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-}
-
-.right .glasses .tip{
-    margin: 0 5vw;
-    width: 7vw;
+.right h1{
+    padding: 0 3vw;
 }
 
 .right .qoute{
     background-color: black;
     color: green;
-    height: 20vh;
-    width:30vw;
+    height: 30vh;
+    width: 30vw;
     margin: 2vh 0;
     display: flex;
     align-items: center;
@@ -122,7 +122,7 @@ body{
 }
 
 .back{
-    margin-top: 45vh;
+    margin-top: 30vh;
     transform: rotateZ(90deg);
 }
 
