--- a/css/landing.css
+++ b/css/landing.css
@@ -39,7 +39,14 @@ p {
   margin: 2vh 2vw;
   font-size: 4vh;
 }
-
+.navigation-bar nav ul li a{
+text-decoration:none;
+  color:#682AE9;
+}
+.navigation-bar nav ul li a:hover{
+font-size:5vh;
+color:white;
+}
 #welcome {
   margin-top: 10vh;
 }
