--- a/css/landing.css
+++ b/css/landing.css
@@ -1,53 +1,60 @@
 * {
+  font-family: "Maven Pro", sans-serif;
   margin: 0;
   padding: 0;
-  font-family: 'Archivo Narrow', sans-serif;
-  font-family: 'Dosis', sans-serif;
-  font-family: 'Raleway', sans-serif;
-  font-family: 'Roboto Condensed', sans-serif;
+  scroll-behavior: smooth;
 }
 
 body {
-  background-color: #0E1111;
-  color: #682AE9;
+  background-color: #0e1111;
+  color: #7E59BA;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 
+.logotitle img{
+  margin-left: 2vw;
+  width:6vw;
+}
+
 .heading {
   font-size: 8vh;
   font-weight: 700;
-  color: #682AE9;
+  color: #7E59BA;
 }
 
 p {
-  font-size: 6vh;
+  font-size: 4.8vh;
   color: aliceblue;
 }
 
-.navigation-bar nav ul {
+.navigation-bar {
+  
+  font-size: 5.8vh;
+  margin-top: 3vh;
+  height: 9vh;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  list-style: none;
-  margin-left: 70vw;
 }
-
-.navigation-bar nav ul li {
-  margin: 2vh 2vw;
-  font-size: 4vh;
+.nav1 {
+margin-left: 62vw;
+  width: 16.4vw;
 }
-
-.navigation-bar nav ul li a{
+.nav2 {
+  width: 13vw;
+}
+.navigation-bar a {
   text-decoration: none;
-  color: #682AE9;
+  color: #7E59BA;
+  transition-duration: 500ms;
 }
-
-.navigation-bar nav ul li a:hover{
+.navigation-bar a:hover {
   text-decoration: none;
+  transform-style: preserve-3d;
+  font-size: 5.2vh;
   color: white;
+  transition-duration: 500ms;
 }
 
 #welcome {
@@ -55,15 +62,13 @@ p {
 }
 
 .box {
-  padding: 10vh 2vw;
-  height: 39vh;
-  flex-direction: column;
-  margin: 4vh 0;
+  width: 55vw;
+  margin-top: 20vh;
   overflow: scroll;
 }
 
 .spacer {
-  margin: 80vh 0;
+  margin: 44vh 0;
 }
 
 ::-webkit-scrollbar {
@@ -76,26 +81,25 @@ p {
   width: 15vw;
   border-radius: 15px;
   border-style: none;
-  background-color: #682AE9;
-  margin-left: 100px;
+  background-color: #7E59BA;
   color: white;
   font-size: 5vh;
   cursor: pointer;
 }
 
-.get-link :hover{
-  background-color: white ;
-  color: #682AE9;
+.get-link :hover {
+  background-color: white;
+  color: #682ae9;
 }
 
 /**************About us**************/
 
-.discord{
-   font-size: 5vh;
-   margin-left: 1vw;
+.discord {
+  font-size: 5vh;
+  margin-left: 1vw;
 }
 
-.discord img{
+.discord img {
   height: 3vh;
 }
 
@@ -110,158 +114,41 @@ p {
   border-radius: 12px;
 }
 
-.profile_left{
+.profile_left {
   margin-right: 2vw;
 }
 
-.profile_right p{
+.profile_right p {
   font-size: 3vh;
 }
 
 .profile_right img {
   height: 4vh;
-  margin: 1vh 2vw 0 0;  
+  margin: 1vh 2vw 0 0;
 }
 
-.profile_left img{
+.profile_left img {
   height: 10vh;
   border-radius: 50%;
 }
 
 .About_us {
+  margin-top: 35vh;
   display: flex;
   flex-direction: column;
   justify-content: start;
 }
 
-.names{
+.names {
   display: flex;
   justify-content: start;
   align-items: center;
-  margin:2vh 0;
+  margin: 2vh 0;
 }
 
-
-/********************MOVING BALL********************/
-.ball {
-  border-radius: 25px;
-  width: 20px;
-  height: 20px;
-  background: rgb(255, 255, 255, 0.8);
-  position: absolute;
-  top: 0;
-  left: 0;
-  transition: transform 1s;
-}
-
-
-/****************************locomotive***********************************/
-.section {
-  margin: 50vh 0;
-}
-
-html.has-scroll-smooth {
-  overflow: hidden;
-}
-
-html.has-scroll-dragging {
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-}
-
-.has-scroll-smooth body {
-  overflow: hidden;
-}
-
-.has-scroll-smooth [data-scroll-container] {
-  min-height: 100vh;
-}
-
-[data-scroll-direction="horizontal"] [data-scroll-container] {
-  height: 100vh;
-  display: inline-block;
-  white-space: nowrap;
-}
-
-[data-scroll-direction="horizontal"] [data-scroll-section] {
-  display: inline-block;
-  vertical-align: top;
-  white-space: nowrap;
-  height: 100%;
-}
-
-.c-scrollbar {
-  position: absolute;
-  right: 0;
-  top: 0;
-  width: 11px;
-  height: 100%;
-  transform-origin: center right;
-  transition: transform 0.3s, opacity 0.3s;
-  opacity: 0;
-}
-
-.c-scrollbar:hover {
-  transform: scaleX(1.45);
-}
-
-.c-scrollbar:hover, .has-scroll-scrolling .c-scrollbar, .has-scroll-dragging .c-scrollbar {
-  opacity: 1;
-}
-
-[data-scroll-direction="horizontal"] .c-scrollbar {
-  width: 100%;
-  height: 10px;
-  top: auto;
-  bottom: 0;
-  transform: scaleY(1);
-}
-
-[data-scroll-direction="horizontal"] .c-scrollbar:hover {
-  transform: scaleY(1.3);
-}
-
-.c-scrollbar_thumb {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background-color: black;
-  opacity: 0.5;
-  width: 7px;
-  border-radius: 10px;
-  margin: 2px;
-  cursor: -webkit-grab;
-  cursor: grab;
-}
-
-.has-scroll-dragging .c-scrollbar_thumb {
-  cursor: -webkit-grabbing;
-  cursor: grabbing;
-}
-
-[data-scroll-direction="horizontal"] .c-scrollbar_thumb {
-  right: auto;
-  bottom: 0;
-}
-
-/*********************fade******************/
-
-.fade {
-  animation: fade 4s;
-}
-
-.fade2 {
-  animation: fade 4s;
-}
-
-@keyframes fade {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
+/***************styling the discord image***************/
+img.discord_image {
+  width: 2.8vw;
+  height: 6.5vh;
+  margin-bottom: -2vh;
 }
