--- a/css/topic.css
+++ b/css/topic.css
@@ -1,19 +1,16 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Archivo Narrow', sans-serif;
-    font-family: 'Dosis', sans-serif;
-    font-family: 'Raleway', sans-serif;
-    font-family: 'Roboto Condensed', sans-serif;
 }
 
 body{
-    background-color: #0E1111;
-    color: #682AE9;
+    background-color: #202123;
+    color: #D3D3D3;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    font-family: 'Maven Pro', sans-serif;
 }
 
 .main{
@@ -26,7 +23,7 @@ body{
     width: 20vw;
     height: 80vh;
     margin: 8vh 8vw 0 2vw;
-    background-color: #682AE9;
+    background-color: #8b63cc;
     border-radius: 12px;
 }
 
@@ -45,9 +42,10 @@ body{
 }
 
 .sidebar ul li a{
-    margin:0 1vw;
     text-decoration: none;
+    margin:0 1vw;
     cursor: pointer;
+    color: #373737;
 }
 
 .middle{
@@ -76,6 +74,10 @@ body{
     animation: fade 2s;
 }
 
+.middle li img{
+    border-radius: 50%;
+}
+
 @keyframes fade{
     0%   
     {opacity: 0;
@@ -86,6 +88,7 @@ body{
 
 .middle ul li a{
     text-decoration: none;
+    color: #373737;
 }
 
 .middle ul li img{
@@ -106,8 +109,10 @@ body{
 }
 
 .right .qoute{
-    background-color: black;
-    color: green;
+    background-color: #202123;
+    -webkit-box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.41);
+    box-shadow: 5px 5px 15px 0px rgba(0, 0, 0, 0.41);
+    color: #D3D3D3;
     height: 30vh;
     width: 30vw;
     margin: 2vh 0;
@@ -131,10 +136,10 @@ body{
     height: 4vh;
     border-radius: 16px;
     border-style: none;
-    background-color: black;
+    background-color: #8b63cc;   
 }
 
 .back button a{
     text-decoration: none; 
-    color: green;
+    color: #D3D3D3;
 }
